--- a/solidity/test.ipynb
+++ b/solidity/test.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
     "        lines = contract_content.split('\\n')\n",
     "        stack = []\n",
     "        for line in lines:\n",
-    "            # print(line)\n",
+    "            print(line)\n",
     "            # print(stack)\n",
     "            interface_match = re.match(r'^\\s*interface\\s+(\\w+)\\s*{', line)\n",
     "            interface_is_match = re.match(r'^\\s*interface\\s+(\\w+)\\s+(is).*{', line)\n",
@@ -375,7 +375,7 @@
     "            #     continue\n",
     "            for index in range(len(code)):\n",
     "                line = code[index]\n",
-    "                match = re.match(r'^\\s*(event|function|modifier)\\s+(\\w+)\\s*\\((.*?)\\)\\s*', line)\n",
+    "                match = re.match(r'^\\s*(event|function|modifier|error)\\s+(\\w+)\\s*\\((.*?)\\)\\s*', line)\n",
     "                if match:\n",
     "                    function_type = match.group(1)\n",
     "                    if function_type not in extracted[filename][contract_name]:\n",
@@ -387,7 +387,7 @@
     "                    \n",
     "                    extracted[filename][contract_name][function_type][function_name] = parameters\n",
     "                    continue\n",
-    "                match = re.match(r'^\\s*(constructor|fallback)\\s*\\((.*?)\\)\\s*', line)\n",
+    "                match = re.match(r'^\\s*(constructor|fallback|receive)\\s*\\((.*?)\\)\\s*', line)\n",
     "                if match:\n",
     "                    function_type = match.group(1)\n",
     "                    if function_type not in extracted[filename][contract_name]:\n",
@@ -397,7 +397,7 @@
     "                    parameters = get_parameters(parameters)\n",
     "                    extracted[filename][contract_name][function_type][function_name] = parameters\n",
     "                    continue\n",
-    "                match = re.match(r'^\\s*(event|function|modifier)\\s+(\\w+)\\s*\\(*', line)\n",
+    "                match = re.match(r'^\\s*(event|function|modifier|error)\\s+(\\w+)\\s*\\(*', line)\n",
     "                if match:\n",
     "                    stack.append('(')\n",
     "                    function_type = match.group(1)\n",
@@ -413,13 +413,13 @@
     "                            parameters += line.strip()\n",
     "                            \n",
     "                            if len(stack) == 0:\n",
-    "                                parameters = re.match(r'^\\s*(event|function|modifier)\\s+(\\w+)\\s*\\((.*?)\\)\\s*', parameters).group(3)\n",
+    "                                parameters = re.match(r'^\\s*(event|function|modifier|error)\\s+(\\w+)\\s*\\((.*?)\\)\\s*', parameters).group(3)\n",
     "                                parameters = get_parameters(parameters)\n",
     "                                extracted[filename][contract_name][function_type][function_name] = parameters\n",
     "                                break\n",
     "                        parameters += line.strip()\n",
     "                        index += 1\n",
-    "                match = re.match(r'^\\s*(constructor|fallback)\\s+(\\w+)\\s*\\(*', line)\n",
+    "                match = re.match(r'^\\s*(constructor|fallback|receive)\\s+(\\w+)\\s*\\(*', line)\n",
     "                if match:\n",
     "                    stack.append('(')\n",
     "                    function_type = match.group(1)\n",
@@ -435,7 +435,7 @@
     "                            parameters += line.strip()\n",
     "                            \n",
     "                            if len(stack) == 0:\n",
-    "                                parameters = re.match(r'^\\s*(constructor|fallback)\\s*\\((.*?)\\)\\s*', parameters).group(2)\n",
+    "                                parameters = re.match(r'^\\s*(constructor|fallback|receive)\\s*\\((.*?)\\)\\s*', parameters).group(2)\n",
     "                                parameters = get_parameters(parameters)\n",
     "                                extracted[filename][contract_name][function_type][function_name] = parameters\n",
     "                                break\n",
@@ -445,9 +445,10 @@
     "    return extracted\n",
     "\n",
     "\n",
+    "\n",
     "extracted = {}\n",
     "\n",
-    "filepath = '/Users/lxmliu2002/Desktop/solidity/test/0x703ee3e326600e9fa113eea2c693eaebadc3ce27/01_01_Wally.sol'\n",
+    "filepath = '/mnt/data/chenlongfei/liuxm/solidity/solidity/test/0x703ee3e326600e9fa113eea2c693eaebadc3ce27/1_29_Initializable.sol'\n",
     "\n",
     "functions_events = extract_functions(filepath, extracted)\n",
     "\n"
@@ -517,8 +518,8 @@
     "                # print(parameters)\n",
     "                for parameters_type, parameters_name in parameters.items():\n",
     "                    print(f\"      {parameters_type}: {parameters_name}\")\n",
-    "                parameters = get_parameters(parameters)\n",
-    "                print(parameters)\n",
+    "                # parameters = get_parameters(parameters)\n",
+    "                # print(parameters)\n",
     "            # print()"
    ]
   },
