--- a/1.ipynb
+++ b/1.ipynb
@@ -2,108 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 57.16it/s]"
+      "100%|██████████| 1/1 [00:00<00:00, 56.91it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    function totalSupply() external view returns (uint256);\n",
-      "    function balanceOf(address account) external view returns (uint256);\n",
-      "    function transfer(address recipient, uint256 amount) external returns (bool);\n",
-      "    function allowance(address owner, address spender) external view returns (uint256);\n",
-      "    function approve(address spender, uint256 amount) external returns (bool);\n",
-      "    function transferFrom(address sender, address recipient, uint256 amount) external returns (bool);\n",
-      "    event Transfer(address indexed from, address indexed to, uint256 value);\n",
-      "    event Approval (address indexed owner, address indexed spender, uint256 value);\n",
-      "    function createPair(address tokenA, address tokenB) external returns (address pair);\n",
-      "    function swapExactTokensForETHSupportingFeeOnTransferTokens(\n",
-      "        uint amountIn,\n",
-      "        uint amountOutMin,\n",
-      "        address[] calldata path,\n",
-      "        address to,\n",
-      "        uint deadline\n",
-      "    ) external;\n",
-      "    function factory() external pure returns (address);\n",
-      "    function WETH() external pure returns (address);\n",
-      "    function addLiquidityETH(\n",
-      "        address token,\n",
-      "        uint amountTokenDesired,\n",
-      "        uint amountTokenMin,\n",
-      "        uint amountETHMin,\n",
-      "        address to,\n",
-      "        uint deadline\n",
-      "    ) external payable returns (uint amountToken, uint amountETH, uint liquidity);\n",
-      "    function _msgSender() internal view virtual returns (address) {\n",
-      "        return msg.sender;\n",
-      "    }\n",
-      "    address private _owner;\n",
-      "    event OwnershipTransferred(address indexed previousOwner, address indexed newOwner);\n",
-      "\n",
-      "    constructor () {\n",
-      "        address msgSender = _msgSender();\n",
-      "        _owner = msgSender;\n",
-      "        emit OwnershipTransferred(address(0), msgSender);\n",
-      "    }\n",
-      "\n",
-      "    function owner() public view returns (address) {\n",
-      "        return _owner;\n",
-      "    }\n",
-      "\n",
-      "    modifier onlyOwner() {\n",
-      "        require(_owner == _msgSender(), \"Ownable: caller is not the owner\");\n",
-      "        _;\n",
-      "    }\n",
-      "\n",
-      "    function renounceOwnership() public virtual onlyOwner {\n",
-      "        emit OwnershipTransferred(_owner, address(0));\n",
-      "        _owner = address(0);\n",
-      "    }\n",
-      "\n",
-      "    using SafeMath for uint256;\n",
-      "    mapping (address => uint256) private _balances;\n",
-      "    mapping (address => mapping (address => uint256)) private _allowances;\n",
-      "    mapping (address => bool) private _isExcludedFromFee;\n",
-      "    mapping (address => bool) private bots;\n",
-      "    address payable private _taxWallet;\n",
-      "    uint256 firstBlock;\n",
-      "\n",
-      "    uint256 private _initialBuyTax=15;\n",
-      "    uint256 private _initialSellTax=15;\n",
-      "    uint256 private _finalBuyTax=3;\n",
-      "    uint256 private _finalSellTax=3;\n",
-      "    uint256 private _reduceBuyTaxAt=15;\n",
-      "    uint256 private _reduceSellTaxAt=15;\n",
-      "    uint256 private _preventSwapBefore=30;\n",
-      "    uint256 private _buyCount=0;\n",
-      "\n",
-      "    uint8 private constant _decimals = 9;\n",
-      "    uint256 private constant _tTotal = 10000000000 * 10**_decimals;\n",
-      "    string private constant _name = unicode\"TURTLE RACE\";\n",
-      "    string private constant _symbol = unicode\"TURTLES\";\n",
-      "    uint256 public _maxTxAmount =   200000000 * 10**_decimals;\n",
-      "    uint256 public _maxWalletSize = 200000000 * 10**_decimals;\n",
-      "    uint256 public _taxSwapThreshold= 100000000 * 10**_decimals;\n",
-      "    uint256 public _maxTaxSwap= 100000000 * 10**_decimals;\n",
-      "\n",
-      "    IUniswapV2Router02 private uniswapV2Router;\n",
-      "    address private uniswapV2Pair;\n",
-      "    bool private tradingOpen;\n",
-      "    bool private inSwap = false;\n",
-      "    bool private swapEnabled = false;\n",
-      "\n",
-      "    event MaxTxAmountUpdated(uint _maxTxAmount);\n",
-      "    modifier lockTheSwap {\n",
-      "Total Time Cost: 0.023394107818603516\n",
-      "Average Time Cost: 0.023394107818603516\n"
+      "<re.Match object; span=(0, 64), match='    function swapExactTokensForETHSupportingFeeOn>\n",
+      "<re.Match object; span=(0, 29), match='    function addLiquidityETH('>\n",
+      "<re.Match object; span=(0, 25), match='    modifier lockTheSwap '>\n",
+      "Total Time Cost: 0.021993160247802734\n",
+      "Average Time Cost: 0.021993160247802734\n"
      ]
     },
     {
@@ -467,7 +384,7 @@
     "            #     continue\n",
     "            for index in range(len(code)):\n",
     "                line = code[index]\n",
-    "                print(line)\n",
+    "                #print(line)\n",
     "                match = re.match(r'^\\s*(event|function|modifier|error)\\s+(\\w+)\\s*\\((.*?)\\)\\s*', line)\n",
     "                if match:\n",
     "                    function_type = match.group(1)\n",
@@ -492,6 +409,7 @@
     "                    continue\n",
     "                match = re.match(r'^\\s*(event|function|modifier|error)\\s+(\\w+)\\s*\\(*', line)\n",
     "                if match:\n",
+    "                    # print(match)\n",
     "                    stack.append('(')\n",
     "                    function_type = match.group(1)\n",
     "                    if function_type not in extracted[filename][contract_type][contract_name]:\n",
